--- a/index.htm
+++ b/index.htm
@@ -228,7 +228,10 @@
 <div class="container">
   <h1>💎 INCREMENTAL TRADE ULTIMATE 💎</h1>
   <p>Le jeu inactif addictif!</p>
-  <button class="btn" onclick="showTutorial()" style="display:block;margin:0 auto 1rem">📖 TUTORIEL</button>
+  <div style="display: flex; gap: 1rem; justify-content: center; margin-bottom: 1rem; flex-wrap: wrap;">
+    <button class="btn" onclick="showTutorial()" style="display:block">📖 TUTORIEL</button>
+    <div class="log" id="log" style="flex: 1; min-width: 200px; max-width: 400px; margin: 0;"></div>
+  </div>
 
   <!-- STATS AFFICHAGE -->
   <div class="stats">
@@ -282,8 +285,6 @@
       <p>Coût: <span id="galaxyCost">100</span> ⭐</p>
       <button class="btn" id="galaxyBtn">🌀 SUPER PRESTIGE (×1.6)</button>
     </div>
-
-    <div class="log" id="log"></div>
   </div>
 
   <!-- TAB: GENERATORS -->
@@ -627,20 +628,24 @@ function buyBoost(boostType) {
 function doPrestige() {
   if (game.totalCoins < 5000) return;
 
-  let g = Math.floor(game.totalCoins / 5000);
-  let ms = Math.min(2, 1 + game.prestige * 0.1);
+  // Boucle pour faire plusieurs prestiges si les pièces le permettent
+  while (game.totalCoins >= 5000) {
+    let g = Math.floor(game.totalCoins / 5000);
+    let ms = Math.min(2, 1 + game.prestige * 0.1);
 
-  game.coins = 0;
-  game.totalCoins = 0;
-  game.stars += Math.floor(g * ms);
-  game.prestige++;
+    game.totalCoins -= g * 5000;
+    game.coins = 0;
+    game.stars += Math.floor(g * ms);
+    game.prestige++;
 
-  if (game.prestige >= 20 && game.prestige % 10 === 0) game.darkMatter++;
+    if (game.prestige >= 20 && game.prestige % 10 === 0) game.darkMatter++;
 
-  for (let gen of game.generators) gen.c = 0;
-  for (let u of game.upgrades) u.b = 0;
+    for (let gen of game.generators) gen.c = 0;
+    for (let u of game.upgrades) u.b = 0;
 
-  log("⭐ +" + Math.floor(g * ms) + "!");
+    log("⭐ +" + Math.floor(g * ms) + "! (Prestige " + game.prestige + ")");
+  }
+
   save();
   updateUI();
 }
@@ -746,10 +751,17 @@ function updateUI() {
     let unlocked = isUnlocked(g);
     let unlockText = getUnlockText(g);
     
+    // Calculer le gain/sec de ce générateur
+    let upgMultiplier = 1;
+    for (let u of game.upgrades) {
+      if (u.t === g.id && u.b) upgMultiplier *= u.e;
+    }
+    let gainPerSec = g.c * g.b * upgMultiplier * Math.pow(1.25, game.stars) * Math.pow(1.6, game.galaxies) * (1 + game.darkMatter * 0.05);
+    
     if (!unlocked) {
       genHtml += `<div class="item" style="opacity:0.5;border-left:3px solid #f66"><strong>${g.n}</strong> ${unlockText}</div>`;
     } else {
-      genHtml += `<div class="item"><strong>${g.n}</strong> ×${g.c}<button class="btn gen-buy" data-id="${g.id}" ${game.coins < cost ? "disabled" : ""}>${fmt(cost)}</button></div>`;
+      genHtml += `<div class="item"><strong>${g.n}</strong> ×${g.c} <span style="color:#0f0">(${fmt(gainPerSec)}/s)</span><button class="btn gen-buy" data-id="${g.id}" ${game.coins < cost ? "disabled" : ""}>${fmt(cost)}</button></div>`;
     }
   }
   $("gensList").innerHTML = genHtml;
