--- a/index.htm
+++ b/index.htm
@@ -494,7 +494,14 @@ let game = {
   ],
 
   boosts: [],
-  graphData: []
+  graphData: [],
+  
+  // TRADING SYSTEM
+  trades: [
+    { id: "min", n: "Risque Minimum", amount: 0, gain: 0, loss: 0 },
+    { id: "mid", n: "Risque Moyen", amount: 0, gain: 0, loss: 0 },
+    { id: "high", n: "Gros Risque", amount: 0, gain: 0, loss: 0 }
+  ]
 };
 
 // =========== UNLOCK SYSTEM ===========
